--- a/marcus/Forecasting.ipynb
+++ b/marcus/Forecasting.ipynb
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1228,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2201,7 +2201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2275,7 +2275,230 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we should test the combinations of different exogenous variables to find the best model."
+    "Note that the AIC for the ADL(2,1) model only containing the industrial variable, 7458.196, is the lowest AIC value."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we should test the combinations of different exogenous variables to find the best model. Due to the number of exogenous variables, manually trying out all the combinations would be a labourious, time consuming task. Hence we will use the ardl package to help us.\n",
+    "\n",
+    "Due to the pecularities of the package, generate the first lag of each exogenous variable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "(2 missing values generated)\n",
+      "(2 missing values generated)\n",
+      "(2 missing values generated)\n",
+      "(2 missing values generated)\n",
+      "(2 missing values generated)\n",
+      "(2 missing values generated)\n",
+      "(2 missing values generated)\n",
+      "(2 missing values generated)\n"
+     ]
+    }
+   ],
+   "source": [
+    "foreach x of varlist *_delta {\n",
+    "    gen `x'_lag = L.`x'\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "ARDL(2,0,0,0,2,4,0,2,1) regression\n",
+      "\n",
+      "Sample:         6 -      2570                   Number of obs     =      2,565\n",
+      "                                                F(  19,   2545)   =       9.53\n",
+      "                                                Prob > F          =     0.0000\n",
+      "                                                R-squared         =     0.0664\n",
+      "                                                Adj R-squared     =     0.0595\n",
+      "Log likelihood = -3682.0556                     Root MSE          =     1.0207\n",
+      "\n",
+      "-------------------------------------------------------------------------------\n",
+      "adjclose_sn~e |      Coef.   Std. Err.      t    P>|t|     [95% Conf. Interval]\n",
+      "--------------+----------------------------------------------------------------\n",
+      "adjclose_sn~e |\n",
+      "          L1. |  -.3185067   .1775198    -1.79   0.073    -.6666047    .0295913\n",
+      "          L2. |  -.2563976   .0828677    -3.09   0.002    -.4188925   -.0939026\n",
+      "              |\n",
+      "adjclose_ph~g |   .0346052   .0380175     0.91   0.363    -.0399433    .1091536\n",
+      "adjclose_se~g |    .076687   .0274582     2.79   0.005     .0228443    .1305298\n",
+      "adjclose_in~g |   .1312501   .0583509     2.25   0.025     .0168301    .2456702\n",
+      "              |\n",
+      "adjclose_en~g |\n",
+      "          --. |   .0249752   .0254983     0.98   0.327    -.0250244    .0749748\n",
+      "          L1. |   .0902516   .0232604     3.88   0.000     .0446404    .1358628\n",
+      "          L2. |   .0659364   .0190757     3.46   0.001     .0285309    .1033418\n",
+      "              |\n",
+      "adjclose_fi~g |\n",
+      "          --. |  -.0720581   .0293757    -2.45   0.014    -.1296608   -.0144554\n",
+      "          L1. |   .0546534   .0268202     2.04   0.042     .0020617    .1072451\n",
+      "          L2. |  -.0146342   .0199752    -0.73   0.464    -.0538036    .0245351\n",
+      "          L3. |  -.0138453   .0142438    -0.97   0.331     -.041776    .0140853\n",
+      "          L4. |   -.039605   .0143864    -2.75   0.006    -.0678153   -.0113947\n",
+      "              |\n",
+      "adjclose_te~g |   -.145803   .0684367    -2.13   0.033    -.2800002   -.0116057\n",
+      "              |\n",
+      "adjclose_ut~g |\n",
+      "          --. |  -.0706405   .0289537    -2.44   0.015    -.1274156   -.0138653\n",
+      "          L1. |   .0583176   .0265784     2.19   0.028     .0062001    .1104351\n",
+      "          L2. |  -.0841672   .0239556    -3.51   0.000    -.1311415   -.0371928\n",
+      "              |\n",
+      "adjclose_co~g |\n",
+      "          --. |   .1628011   .0544873     2.99   0.003     .0559571    .2696451\n",
+      "          L1. |   .1076298   .0531045     2.03   0.043     .0034974    .2117623\n",
+      "              |\n",
+      "        _cons |   .0401996   .0203935     1.97   0.049       .00021    .0801891\n",
+      "-------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "ardl adjclose_snp500_change adjclose_pharm_delta_lag adjclose_semicon_delta_lag adjclose_industrial_delta_lag adjclose_energy_delta_lag adjclose_financial_delta_lag adjclose_tech_delta_lag adjclose_utilities_delta_lag adjclose_consumer_delta_lag, maxcombs(8398080) lag(2 . . . . . . . .) maxlag(4) aic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Akaike's information criterion and Bayesian information criterion\n",
+      "\n",
+      "-----------------------------------------------------------------------------\n",
+      "       Model |        Obs  ll(null)  ll(model)      df         AIC        BIC\n",
+      "-------------+---------------------------------------------------------------\n",
+      "           . |      2,565 -3770.233  -3682.056      20    7404.111   7521.106\n",
+      "-----------------------------------------------------------------------------\n",
+      "               Note: N=Obs used in calculating BIC; see [R] BIC note.\n"
+     ]
+    }
+   ],
+   "source": [
+    "estat ic"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice that the coefficient on the first lag of pharm exogenous variable is not significant. Hence we re-run ardl while dropping pharm."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "ARDL(2,0,0,2,4,0,2,1) regression\n",
+      "\n",
+      "Sample:         6 -      2570                   Number of obs     =      2,565\n",
+      "                                                F(  18,   2546)   =      10.02\n",
+      "                                                Prob > F          =     0.0000\n",
+      "                                                R-squared         =     0.0661\n",
+      "                                                Adj R-squared     =     0.0595\n",
+      "Log likelihood = -3682.4731                     Root MSE          =     1.0207\n",
+      "\n",
+      "-------------------------------------------------------------------------------\n",
+      "adjclose_sn~e |      Coef.   Std. Err.      t    P>|t|     [95% Conf. Interval]\n",
+      "--------------+----------------------------------------------------------------\n",
+      "adjclose_sn~e |\n",
+      "          L1. |  -.2265372   .1459558    -1.55   0.121    -.5127415     .059667\n",
+      "          L2. |  -.2545655   .0828404    -3.07   0.002     -.417007    -.092124\n",
+      "              |\n",
+      "adjclose_se~g |   .0778841   .0274258     2.84   0.005     .0241049    .1316632\n",
+      "adjclose_in~g |    .117409   .0563329     2.08   0.037     .0069461    .2278719\n",
+      "              |\n",
+      "adjclose_en~g |\n",
+      "          --. |    .019055   .0246541     0.77   0.440     -.029289    .0673991\n",
+      "          L1. |   .0905756   .0232569     3.89   0.000     .0449713    .1361799\n",
+      "          L2. |   .0660552   .0190746     3.46   0.001     .0286518    .1034585\n",
+      "              |\n",
+      "adjclose_fi~g |\n",
+      "          --. |  -.0781655   .0285982    -2.73   0.006    -.1342436   -.0220874\n",
+      "          L1. |   .0543432   .0268172     2.03   0.043     .0017575    .1069289\n",
+      "          L2. |  -.0147218   .0199743    -0.74   0.461    -.0538894    .0244457\n",
+      "          L3. |  -.0135149   .0142387    -0.95   0.343    -.0414355    .0144057\n",
+      "          L4. |  -.0391948   .0143789    -2.73   0.006    -.0673903   -.0109993\n",
+      "              |\n",
+      "adjclose_te~g |  -.1667544   .0644476    -2.59   0.010    -.2931295   -.0403793\n",
+      "              |\n",
+      "adjclose_ut~g |\n",
+      "          --. |  -.0754754   .0284613    -2.65   0.008    -.1312851   -.0196657\n",
+      "          L1. |   .0582799   .0265775     2.19   0.028     .0061643    .1103956\n",
+      "          L2. |  -.0830065   .0239208    -3.47   0.001    -.1299127   -.0361003\n",
+      "              |\n",
+      "adjclose_co~g |\n",
+      "          --. |   .1519244   .0531591     2.86   0.004     .0476849    .2561639\n",
+      "          L1. |   .1072675   .0531012     2.02   0.043     .0031415    .2113935\n",
+      "              |\n",
+      "        _cons |   .0405663   .0203888     1.99   0.047     .0005859    .0805467\n",
+      "-------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "ardl adjclose_snp500_change adjclose_semicon_delta_lag adjclose_industrial_delta_lag adjclose_energy_delta_lag adjclose_financial_delta_lag adjclose_tech_delta_lag adjclose_utilities_delta_lag adjclose_consumer_delta_lag, maxcombs(8398080) lag(2 . . . . . . .) maxlag(4) aic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Akaike's information criterion and Bayesian information criterion\n",
+      "\n",
+      "-----------------------------------------------------------------------------\n",
+      "       Model |        Obs  ll(null)  ll(model)      df         AIC        BIC\n",
+      "-------------+---------------------------------------------------------------\n",
+      "           . |      2,565 -3770.233  -3682.473      19    7402.946   7514.091\n",
+      "-----------------------------------------------------------------------------\n",
+      "               Note: N=Obs used in calculating BIC; see [R] BIC note.\n"
+     ]
+    }
+   ],
+   "source": [
+    "estat ic"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As expected, the fit improved. The combined model is apparently also a better fit than the ADL(2,1) model only using industrial as an exogenous variable."
    ]
   }
  ],
