completed forecasting using 3 models

--- a/marcus/Forecasting.ipynb
+++ b/marcus/Forecasting.ipynb
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2545,7 +2545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2689,7 +2689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2698,7 +2698,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "      Source |       SS           df       MS      Number of obs   =     2,568\n",
+      "-------------+----------------------------------   F(2, 2565)      =     37.92\n",
+      "       Model |  81.5673066         2  40.7836533   Prob > F        =    0.0000\n",
+      "    Residual |  2758.74683     2,565  1.07553483   R-squared       =    0.0287\n",
+      "-------------+----------------------------------   Adj R-squared   =    0.0280\n",
+      "       Total |  2840.31414     2,567   1.1064722   Root MSE        =    1.0371\n",
+      "\n",
+      "-------------------------------------------------------------------------------\n",
+      "adjclose_sn~e |      Coef.   Std. Err.      t    P>|t|     [95% Conf. Interval]\n",
+      "--------------+----------------------------------------------------------------\n",
+      "adjclose_sn~e |\n",
+      "          L1. |    -.13892   .0197518    -7.03   0.000    -.1776511   -.1001888\n",
+      "          L2. |   .0794258   .0197522     4.02   0.000     .0406939    .1181578\n",
+      "              |\n",
+      "        _cons |   .0292586   .0204839     1.43   0.153     -.010908    .0694251\n",
+      "-------------------------------------------------------------------------------\n",
+      "\n",
+      "(option xb assumed; fitted values)\n",
+      "(7 missing values generated)\n"
+     ]
+    }
+   ],
+   "source": [
+    "reg adjclose_snp500_change L(1/2).adjclose_snp500_change if time<2571\n",
+    "predict ar2in"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2759,7 +2797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2789,11 +2827,326 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "      Source |       SS           df       MS      Number of obs   =     2,568\n",
+      "-------------+----------------------------------   F(3, 2564)      =     30.64\n",
+      "       Model |  98.3151126         3  32.7717042   Prob > F        =    0.0000\n",
+      "    Residual |  2741.99902     2,564   1.0694224   R-squared       =    0.0346\n",
+      "-------------+----------------------------------   Adj R-squared   =    0.0335\n",
+      "       Total |  2840.31414     2,567   1.1064722   Root MSE        =    1.0341\n",
+      "\n",
+      "-------------------------------------------------------------------------------\n",
+      "adjclose_sn~e |      Coef.   Std. Err.      t    P>|t|     [95% Conf. Interval]\n",
+      "--------------+----------------------------------------------------------------\n",
+      "adjclose_sn~e |\n",
+      "          L1. |  -.3636112   .0600973    -6.05   0.000    -.4814553    -.245767\n",
+      "          L2. |   .0690277   .0198705     3.47   0.001     .0300638    .1079916\n",
+      "              |\n",
+      "adjclose_in~a |\n",
+      "          L1. |   .2046256   .0517078     3.96   0.000     .1032324    .3060188\n",
+      "              |\n",
+      "        _cons |   .0295763   .0204257     1.45   0.148    -.0104763    .0696289\n",
+      "-------------------------------------------------------------------------------\n",
+      "\n",
+      "(option xb assumed; fitted values)\n",
+      "(7 missing values generated)\n"
+     ]
+    }
+   ],
+   "source": [
+    "reg adjclose_snp500_change L(1/2).adjclose_snp500_change L.adjclose_industrial_delta if time<2571\n",
+    "predict adl21in"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "(option xb assumed; fitted values)\n",
+      "(7 missing values generated)\n",
+      "(7 missing values generated)\n",
+      "(7 missing values generated)\n",
+      "(7 missing values generated)\n",
+      "(7 missing values generated)\n",
+      "(7 missing values generated)\n",
+      "(option xb assumed; fitted values)\n",
+      "(7 missing values generated)\n",
+      "(7 missing values generated)\n",
+      "(7 missing values generated)\n",
+      "(7 missing values generated)\n",
+      "(7 missing values generated)\n",
+      "(7 missing values generated)\n",
+      "(option xb assumed; fitted values)\n",
+      "(7 missing values generated)\n",
+      "(7 missing values generated)\n",
+      "(7 missing values generated)\n",
+      "(7 missing values generated)\n",
+      "(7 missing values generated)\n",
+      "(7 missing values generated)\n",
+      "(option xb assumed; fitted values)\n",
+      "(7 missing values generated)\n",
+      "(7 missing values generated)\n",
+      "(7 missing values generated)\n",
+      "(7 missing values generated)\n",
+      "(7 missing values generated)\n",
+      "(7 missing values generated)\n",
+      "(option xb assumed; fitted values)\n",
+      "(7 missing values generated)\n",
+      "(7 missing values generated)\n",
+      "(7 missing values generated)\n",
+      "(7 missing values generated)\n",
+      "(7 missing values generated)\n",
+      "(7 missing values generated)\n"
+     ]
+    }
+   ],
+   "source": [
+    "forvalues p=1/5{\n",
+    "    local q = `p'+1\n",
+    "    qui reg adjclose_snp500_change L(`p'/`q').adjclose_snp500_change L`p'.adjclose_industrial_delta\n",
+    "    predict adl21`p'\n",
+    "    predict adl21sf`p', stdf\n",
+    "    gen adl21`p'L68 = adl21`p'-0.995*adl21sf`p'\n",
+    "    gen adl21`p'U68 = adl21`p'+0.995*adl21sf`p'\n",
+    "    gen adl21`p'L50 = adl21`p'-0.675*adl21sf`p'\n",
+    "    gen adl21`p'U50 = adl21`p'+0.675*adl21sf`p'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "(2571 missing values generated)\n",
+      "\n",
+      "(2571 missing values generated)\n",
+      "\n",
+      "(2571 missing values generated)\n",
+      "\n",
+      "(2571 missing values generated)\n",
+      "\n",
+      "(2571 missing values generated)\n"
+     ]
+    }
+   ],
+   "source": [
+    "egen adl21p2=rowfirst(adl211 adl212 adl213 adl214 adl215) if time>=2571\n",
+    "egen adl21pL68=rowfirst(adl211L68 adl212L68 adl213L68 adl214L68 adl215L68) if time>=2571\n",
+    "egen adl21pU68=rowfirst(adl211U68 adl212U68 adl213U68 adl214U68 adl215U68) if time>=2571\n",
+    "egen adl21pL50=rowfirst(adl211L50 adl212L50 adl213L50 adl214L50 adl215L50) if time>=2571\n",
+    "egen adl21pU50=rowfirst(adl211U50 adl212U50 adl213U50 adl214U50 adl215U50) if time>=2571"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "      Source |       SS           df       MS      Number of obs   =     2,565\n",
+      "-------------+----------------------------------   F(18, 2546)     =     10.02\n",
+      "       Model |  187.843986        18   10.435777   Prob > F        =    0.0000\n",
+      "    Residual |  2652.24233     2,546  1.04172912   R-squared       =    0.0661\n",
+      "-------------+----------------------------------   Adj R-squared   =    0.0595\n",
+      "       Total |  2840.08632     2,564  1.10767797   Root MSE        =    1.0207\n",
+      "\n",
+      "-------------------------------------------------------------------------------\n",
+      "adjclose_sn~e |      Coef.   Std. Err.      t    P>|t|     [95% Conf. Interval]\n",
+      "--------------+----------------------------------------------------------------\n",
+      "adjclose_sn~e |\n",
+      "          L1. |  -.2265372   .1459558    -1.55   0.121    -.5127415     .059667\n",
+      "          L2. |  -.2545655   .0828404    -3.07   0.002     -.417007    -.092124\n",
+      "              |\n",
+      "adjclose_se~a |\n",
+      "          L1. |   .0778841   .0274258     2.84   0.005     .0241049    .1316632\n",
+      "              |\n",
+      "adjclose_in~a |\n",
+      "          L1. |    .117409   .0563329     2.08   0.037     .0069461    .2278719\n",
+      "              |\n",
+      "adjclose_en~a |\n",
+      "          L1. |    .019055   .0246541     0.77   0.440     -.029289    .0673991\n",
+      "          L2. |   .0905756   .0232569     3.89   0.000     .0449713    .1361799\n",
+      "          L3. |   .0660552   .0190746     3.46   0.001     .0286518    .1034585\n",
+      "              |\n",
+      "adjclose_fi~a |\n",
+      "          L1. |  -.0781655   .0285982    -2.73   0.006    -.1342436   -.0220874\n",
+      "          L2. |   .0543432   .0268172     2.03   0.043     .0017575    .1069289\n",
+      "          L3. |  -.0147218   .0199743    -0.74   0.461    -.0538894    .0244457\n",
+      "          L4. |  -.0135149   .0142387    -0.95   0.343    -.0414355    .0144057\n",
+      "          L5. |  -.0391948   .0143789    -2.73   0.006    -.0673903   -.0109993\n",
+      "              |\n",
+      "adjclose_te~a |\n",
+      "          L1. |  -.1667544   .0644476    -2.59   0.010    -.2931295   -.0403793\n",
+      "              |\n",
+      "adjclose_ut~a |\n",
+      "          L1. |  -.0754754   .0284613    -2.65   0.008    -.1312851   -.0196657\n",
+      "          L2. |   .0582799   .0265775     2.19   0.028     .0061643    .1103956\n",
+      "          L3. |  -.0830065   .0239208    -3.47   0.001    -.1299127   -.0361003\n",
+      "              |\n",
+      "adjclose_co~a |\n",
+      "          L1. |   .1519244   .0531591     2.86   0.004     .0476849    .2561639\n",
+      "          L2. |   .1072675   .0531012     2.02   0.043     .0031415    .2113935\n",
+      "              |\n",
+      "        _cons |   .0405663   .0203888     1.99   0.047     .0005859    .0805467\n",
+      "-------------------------------------------------------------------------------\n",
+      "\n",
+      "(option xb assumed; fitted values)\n",
+      "(10 missing values generated)\n"
+     ]
+    }
+   ],
+   "source": [
+    "reg adjclose_snp500_change L(1/2).adjclose_snp500_change L.adjclose_semicon_delta L.adjclose_industrial_delta L(1/3).adjclose_energy_delta L(1/5).adjclose_financial_delta L.adjclose_tech_delta L(1/3).adjclose_utilities_delta L(1/2).adjclose_consumer_delta if time<2571\n",
+    "predict combin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "(option xb assumed; fitted values)\n",
+      "(10 missing values generated)\n",
+      "(10 missing values generated)\n",
+      "(10 missing values generated)\n",
+      "(10 missing values generated)\n",
+      "(10 missing values generated)\n",
+      "(10 missing values generated)\n",
+      "(option xb assumed; fitted values)\n",
+      "(10 missing values generated)\n",
+      "(10 missing values generated)\n",
+      "(10 missing values generated)\n",
+      "(10 missing values generated)\n",
+      "(10 missing values generated)\n",
+      "(10 missing values generated)\n",
+      "(option xb assumed; fitted values)\n",
+      "(10 missing values generated)\n",
+      "(10 missing values generated)\n",
+      "(10 missing values generated)\n",
+      "(10 missing values generated)\n",
+      "(10 missing values generated)\n",
+      "(10 missing values generated)\n",
+      "(option xb assumed; fitted values)\n",
+      "(10 missing values generated)\n",
+      "(10 missing values generated)\n",
+      "(10 missing values generated)\n",
+      "(10 missing values generated)\n",
+      "(10 missing values generated)\n",
+      "(10 missing values generated)\n",
+      "(option xb assumed; fitted values)\n",
+      "(10 missing values generated)\n",
+      "(10 missing values generated)\n",
+      "(10 missing values generated)\n",
+      "(10 missing values generated)\n",
+      "(10 missing values generated)\n",
+      "(10 missing values generated)\n"
+     ]
+    }
+   ],
+   "source": [
+    "forvalues p=1/5{\n",
+    "    local q = `p'+1\n",
+    "    local s = `p'+2\n",
+    "    local u = `p'+4\n",
+    "    qui reg adjclose_snp500_change L(`p'/`q').adjclose_snp500_change L`p'.adjclose_semicon_delta L`p'.adjclose_industrial_delta L(`p'/`s').adjclose_energy_delta L(`p'/`u').adjclose_financial_delta L`p'.adjclose_tech_delta L(`p'/`s').adjclose_utilities_delta L(`p'/`q').adjclose_consumer_delta\n",
+    "    predict comb`p'\n",
+    "    predict combsf`p', stdf\n",
+    "    gen comb`p'L68 = comb`p'-0.995*combsf`p'\n",
+    "    gen comb`p'U68 = comb`p'+0.995*combsf`p'\n",
+    "    gen comb`p'L50 = comb`p'-0.675*combsf`p'\n",
+    "    gen comb`p'U50 = comb`p'+0.675*combsf`p'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "(2571 missing values generated)\n",
+      "\n",
+      "(2571 missing values generated)\n",
+      "\n",
+      "(2571 missing values generated)\n",
+      "\n",
+      "(2571 missing values generated)\n",
+      "\n",
+      "(2571 missing values generated)\n"
+     ]
+    }
+   ],
+   "source": [
+    "egen combp2=rowfirst(comb1 comb2 comb3 comb4 comb5) if time>=2571\n",
+    "egen combpL68=rowfirst(comb1L68 comb2L68 comb3L68 comb4L68 comb5L68) if time>=2571\n",
+    "egen combpU68=rowfirst(comb1U68 comb2U68 comb3U68 comb4U68 comb5U68) if time>=2571\n",
+    "egen combpL50=rowfirst(comb1L50 comb2L50 comb3L50 comb4L50 comb5L50) if time>=2571\n",
+    "egen combpU50=rowfirst(comb1U50 comb2U50 comb3U50 comb4U50 comb5U50) if time>=2571"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tsline adjclose_snp500_change ar2p2 ar2pL50 ar2pU50 ar2pL68 ar2pU68 if time>=2545, title(adj_close_SnP_%chg 50% 68% fan with AR2 Model) lpattern (solid solid longdash longdash shortdash shortdash)"
+    "tsline adjclose_snp500_change ar2in ar2p2 ar2pL50 ar2pU50 ar2pL68 ar2pU68 if time>=2545, title(adj_close_SnP_%chg 50% 68% fan with AR2 Model) lpattern (solid solid solid longdash longdash shortdash shortdash)\n",
+    "\n",
+    "tsline adjclose_snp500_change adl21in adl21p2 adl21pL50 adl21pU50 adl21pL68 adl21pU68 if time>=2545, title(adj_close_SnP_%chg 50% 68% fan with ADL21 Model) lpattern (solid solid solid longdash longdash shortdash shortdash)\n",
+    "\n",
+    "tsline adjclose_snp500_change combin combp2 combpL50 combpU50 combpL68 combpU68 if time>=2545, title(adj_close_SnP_%chg 50% 68% fan with COMB Model) lpattern (solid solid solid longdash longdash shortdash shortdash)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"files/snp500changear2combfchart.png\" style=\"width: 500px;\"/>\n",
+    "\n",
+    "<img src=\"files/snp500changeadl21combfchart.png\" style=\"width: 500px;\"/>\n",
+    "\n",
+    "<img src=\"files/snp500changecombcombfchart.png\" style=\"width: 500px;\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All 3 models appear to do a better job at predicting the in sample fit "
    ]
   }
  ],
