--- a/marcus/Forecasting.ipynb
+++ b/marcus/Forecasting.ipynb
@@ -3146,7 +3146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All 3 models appear to do a better job at predicting the in sample fit "
+    "All 3 models appear to do a better job at predicting the in sample fit for later time periods. "
    ]
   }
  ],
