update to POOS forecasting

--- a/marcus/Forecasting.ipynb
+++ b/marcus/Forecasting.ipynb
@@ -2689,15 +2689,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tsappend, add(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -2730,7 +2721,7 @@
     }
    ],
    "source": [
-    "reg adjclose_snp500_change L(1/2).adjclose_snp500_change if time<2571\n",
+    "reg adjclose_snp500_change L(1/2).adjclose_snp500_change if time<2452\n",
     "predict ar2in"
    ]
   },
@@ -2785,8 +2776,8 @@
    "source": [
     "forvalues p=1/5{\n",
     "    local q = `p'+1\n",
-    "    qui reg adjclose_snp500_change L(`p'/`q').adjclose_snp500_change\n",
-    "    predict ar2`p'\n",
+    "    qui reg adjclose_snp500_change L(`p'/`q').adjclose_snp500_change if time<2452\n",
+    "    predict ar2`p' if time>=2452\n",
     "    predict ar2sf`p', stdf\n",
     "    gen ar2`p'L68 = ar2`p'-0.995*ar2sf`p'\n",
     "    gen ar2`p'U68 = ar2`p'+0.995*ar2sf`p'\n",
@@ -2818,11 +2809,11 @@
     }
    ],
    "source": [
-    "egen ar2p2=rowfirst(ar21 ar22 ar23 ar24 ar25) if time>=2571\n",
-    "egen ar2pL68=rowfirst(ar21L68 ar22L68 ar23L68 ar24L68 ar25L68) if time>=2571\n",
-    "egen ar2pU68=rowfirst(ar21U68 ar22U68 ar23U68 ar24U68 ar25U68) if time>=2571\n",
-    "egen ar2pL50=rowfirst(ar21L50 ar22L50 ar23L50 ar24L50 ar25L50) if time>=2571\n",
-    "egen ar2pU50=rowfirst(ar21U50 ar22U50 ar23U50 ar24U50 ar25U50) if time>=2571"
+    "egen ar2p2=rowfirst(ar21 ar22 ar23 ar24 ar25) if time>=2452\n",
+    "egen ar2pL68=rowfirst(ar21L68 ar22L68 ar23L68 ar24L68 ar25L68) if time>=2452\n",
+    "egen ar2pU68=rowfirst(ar21U68 ar22U68 ar23U68 ar24U68 ar25U68) if time>=2452\n",
+    "egen ar2pL50=rowfirst(ar21L50 ar22L50 ar23L50 ar24L50 ar25L50) if time>=2452\n",
+    "egen ar2pU50=rowfirst(ar21U50 ar22U50 ar23U50 ar24U50 ar25U50) if time>=2452"
    ]
   },
   {
@@ -2917,8 +2908,8 @@
    "source": [
     "forvalues p=1/5{\n",
     "    local q = `p'+1\n",
-    "    qui reg adjclose_snp500_change L(`p'/`q').adjclose_snp500_change L`p'.adjclose_industrial_delta\n",
-    "    predict adl21`p'\n",
+    "    qui reg adjclose_snp500_change L(`p'/`q').adjclose_snp500_change L`p'.adjclose_industrial_delta if time<2452\n",
+    "    predict adl21`p' if time>=2452\n",
     "    predict adl21sf`p', stdf\n",
     "    gen adl21`p'L68 = adl21`p'-0.995*adl21sf`p'\n",
     "    gen adl21`p'U68 = adl21`p'+0.995*adl21sf`p'\n",
@@ -2950,11 +2941,11 @@
     }
    ],
    "source": [
-    "egen adl21p2=rowfirst(adl211 adl212 adl213 adl214 adl215) if time>=2571\n",
-    "egen adl21pL68=rowfirst(adl211L68 adl212L68 adl213L68 adl214L68 adl215L68) if time>=2571\n",
-    "egen adl21pU68=rowfirst(adl211U68 adl212U68 adl213U68 adl214U68 adl215U68) if time>=2571\n",
-    "egen adl21pL50=rowfirst(adl211L50 adl212L50 adl213L50 adl214L50 adl215L50) if time>=2571\n",
-    "egen adl21pU50=rowfirst(adl211U50 adl212U50 adl213U50 adl214U50 adl215U50) if time>=2571"
+    "egen adl21p2=rowfirst(adl211 adl212 adl213 adl214 adl215) if time>=2452\n",
+    "egen adl21pL68=rowfirst(adl211L68 adl212L68 adl213L68 adl214L68 adl215L68) if time>=2452\n",
+    "egen adl21pU68=rowfirst(adl211U68 adl212U68 adl213U68 adl214U68 adl215U68) if time>=2452\n",
+    "egen adl21pL50=rowfirst(adl211L50 adl212L50 adl213L50 adl214L50 adl215L50) if time>=2452\n",
+    "egen adl21pU50=rowfirst(adl211U50 adl212U50 adl213U50 adl214U50 adl215U50) if time>=2452"
    ]
   },
   {
@@ -3021,7 +3012,7 @@
     }
    ],
    "source": [
-    "reg adjclose_snp500_change L(1/2).adjclose_snp500_change L.adjclose_semicon_delta L.adjclose_industrial_delta L(1/3).adjclose_energy_delta L(1/5).adjclose_financial_delta L.adjclose_tech_delta L(1/3).adjclose_utilities_delta L(1/2).adjclose_consumer_delta if time<2571\n",
+    "reg adjclose_snp500_change L(1/2).adjclose_snp500_change L.adjclose_semicon_delta L.adjclose_industrial_delta L(1/3).adjclose_energy_delta L(1/5).adjclose_financial_delta L.adjclose_tech_delta L(1/3).adjclose_utilities_delta L(1/2).adjclose_consumer_delta if time<2452\n",
     "predict combin"
    ]
   },
@@ -3078,8 +3069,8 @@
     "    local q = `p'+1\n",
     "    local s = `p'+2\n",
     "    local u = `p'+4\n",
-    "    qui reg adjclose_snp500_change L(`p'/`q').adjclose_snp500_change L`p'.adjclose_semicon_delta L`p'.adjclose_industrial_delta L(`p'/`s').adjclose_energy_delta L(`p'/`u').adjclose_financial_delta L`p'.adjclose_tech_delta L(`p'/`s').adjclose_utilities_delta L(`p'/`q').adjclose_consumer_delta\n",
-    "    predict comb`p'\n",
+    "    qui reg adjclose_snp500_change L(`p'/`q').adjclose_snp500_change L`p'.adjclose_semicon_delta L`p'.adjclose_industrial_delta L(`p'/`s').adjclose_energy_delta L(`p'/`u').adjclose_financial_delta L`p'.adjclose_tech_delta L(`p'/`s').adjclose_utilities_delta L(`p'/`q').adjclose_consumer_delta if time<2452\n",
+    "    predict comb`p' if time>=2452\n",
     "    predict combsf`p', stdf\n",
     "    gen comb`p'L68 = comb`p'-0.995*combsf`p'\n",
     "    gen comb`p'U68 = comb`p'+0.995*combsf`p'\n",
@@ -3111,11 +3102,11 @@
     }
    ],
    "source": [
-    "egen combp2=rowfirst(comb1 comb2 comb3 comb4 comb5) if time>=2571\n",
-    "egen combpL68=rowfirst(comb1L68 comb2L68 comb3L68 comb4L68 comb5L68) if time>=2571\n",
-    "egen combpU68=rowfirst(comb1U68 comb2U68 comb3U68 comb4U68 comb5U68) if time>=2571\n",
-    "egen combpL50=rowfirst(comb1L50 comb2L50 comb3L50 comb4L50 comb5L50) if time>=2571\n",
-    "egen combpU50=rowfirst(comb1U50 comb2U50 comb3U50 comb4U50 comb5U50) if time>=2571"
+    "egen combp2=rowfirst(comb1 comb2 comb3 comb4 comb5) if time>=2452\n",
+    "egen combpL68=rowfirst(comb1L68 comb2L68 comb3L68 comb4L68 comb5L68) if time>=2452\n",
+    "egen combpU68=rowfirst(comb1U68 comb2U68 comb3U68 comb4U68 comb5U68) if time>=2452\n",
+    "egen combpL50=rowfirst(comb1L50 comb2L50 comb3L50 comb4L50 comb5L50) if time>=2452\n",
+    "egen combpU50=rowfirst(comb1U50 comb2U50 comb3U50 comb4U50 comb5U50) if time>=2452"
    ]
   },
   {
